<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardElevation="4dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:id="@+id/bookImage"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:contentDescription="@string/imagen_noticia"
                android:scaleType="centerCrop"
                tools:src="@drawable/ic_launcher_background" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/bookTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/noticia_title"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/bookAuthor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fecha_nac"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/bookDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>


        <!-- Botón de Like en la esquina superior derecha -->
        <ImageButton
            android:id="@+id/btnLike"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="top|end"
            android:layout_margin="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/bot_n_de_favorito"
            android:src="@drawable/ic_favorite_border"
            android:scaleType="fitCenter" />

    </FrameLayout>

</androidx.cardview.widget.CardView>
